--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   pointer-events: none;
 }
 
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -34,5 +35,10 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+@media (max-width:1024px) {
+  .overflow_hidden{
+    overflow: hidden;
   }
 }
